correcciones juzgaods tipo juicios